@@ -196,7 +196,7 @@ operations::
   >>> result = transform(normal_doc)
   Traceback (most recent call last):
     [...]
-  XSLTApplyError: runtime error, element 'value-of', line 6
+  XSLTApplyError: xsltLoadDocument: read rights for hoi:test denied
 
 There are a few things to keep in mind:
 
